--- a/hypotenuse.html
+++ b/hypotenuse.html
@@ -10,10 +10,10 @@
 <body>
     <nav>
         <a href="index.html">Home</a>
-        <a href="istriangle.html">Is Triangle</a>
+        <a href="area.html">Find Area</a>
+        <a href="istriangle.html">Is a Triangle?</a>
         <a href="quiz.html">Quiz</a>
         <a href="hypotenuse.html">Hypotenuse</a>
-        <a href="area.html">Area</a>
     </nav>
 
     <h1>Hypotenuse</h1>
@@ -22,7 +22,7 @@
     <label for="">Side 2 = </label>
     <input type="number" class="side-input" >
     <button id = "hypotenuse-btn" >Calculate Hypotenuse</button>
-    <div id = "output"></div>
+    <div id = "output">Hypotenuse of triangle is : </div>
     <script src="hypotenuse.js"></script>
 </body>
 </html>
