--- a/index.html
+++ b/index.html
@@ -14,26 +14,25 @@
         <tr>
             <td>
                 <label for="">1.</label>
-                <a href="istriangle.html">Is Triangle</a>
+                <a href="istriangle.html">Is it a Triangle?</a>
             </td>
         </tr>
         <tr>
             <td>
                 <label for="">2.</label>
-                <a href="quiz.html">Quiz</a>
-                
+                <a href="area.html">Find Area of a Triangle</a>
             </td>
         </tr>
         <tr>
             <td>
                 <label for="">3.</label>
-                <a href="hypotenuse.html">Hypotenuse</a>
+                <a href="hypotenuse.html">Find Hypotenuse of a Triangle</a>
             </td>
         </tr>
         <tr>
             <td>
                 <label for="">4.</label>
-                <a href="area.html">Area</a>
+                <a href="quiz.html">Quiz of Triangles</a>
             </td>
         </tr>
     </table>
