--- a/istriangle.html
+++ b/istriangle.html
@@ -10,10 +10,10 @@
 <body>
     <nav>
         <a href="index.html">Home</a>
-        <a href="istriangle.html">Is Triangle</a>
+        <a href="area.html">Find Area</a>
+        <a href="istriangle.html">Is a Triangle?</a>
         <a href="quiz.html">Quiz</a>
         <a href="hypotenuse.html">Hypotenuse</a>
-        <a href="area.html">Area</a>
     </nav>
 
     <h1>Is Triangle?? </h1>
@@ -23,7 +23,7 @@
     <input type="number" class = "angle-input">
     <label for="angle3">angle3</label>
     <input type="number" class = "angle-input">
-    <button id = "is-triangle-btn">Is Triangle?</button>
+    <button id = "is-triangle-btn">Is it a Triangle?</button>
     <div id = "output"></div>
     <script src="istriangle.js"></script>
 
