--- a/area.html
+++ b/area.html
@@ -12,10 +12,10 @@
 <body>
     <nav>
         <a href="index.html">Home</a>
-        <a href="istriangle.html">Is Triangle</a>
+        <a href="area.html">Find Area</a>
+        <a href="istriangle.html">Is a Triangle?</a>
         <a href="quiz.html">Quiz</a>
         <a href="hypotenuse.html">Hypotenuse</a>
-        <a href="area.html">Area</a>
     </nav>
 
     <h1>Area of Triangle</h1>
@@ -24,7 +24,7 @@
     <label for="">Side 2 = </label>
     <input type="number" class="side-input">
     <button id="area-btn">Calculate Area</button>
-    <div id="output"></div>
+    <div id="output">Area of circle is :</div>
     <script src="area.js"></script>
 </body>
 
