--- a/hypotenuse.html
+++ b/hypotenuse.html
@@ -23,6 +23,23 @@
     <input type="number" class="side-input" >
     <button id = "hypotenuse-btn" >Calculate Hypotenuse</button>
     <div id = "output">Hypotenuse of triangle is : </div>
+
+    <footer class="footer">
+        <div class="footer-header">let's connect</div>
+  
+        <ul class="social-links list-non-bullet">
+            <li class="list-item-inline">
+                <a class="link" href="https://www.github.com/manishpriyap" target="_blank">github</a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" href="https://www.twitter.com/manishpriyap" target="_blank">twitter</a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" href="https://www.linkedin.com/in/manishpriyap" target="_blank">linkedin</a>
+            </li>
+        </ul>
+    </footer>
+
     <script src="hypotenuse.js"></script>
 </body>
 </html>
