--- a/index.html
+++ b/index.html
@@ -36,6 +36,22 @@
             </td>
         </tr>
     </table>
+
+    <footer class="footer">
+        <div class="footer-header">let's connect</div>
+  
+        <ul class="social-links list-non-bullet">
+            <li class="list-item-inline">
+                <a class="link" href="https://www.github.com/manishpriyap" target="_blank">github</a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" href="https://www.twitter.com/manishpriyap" target="_blank">twitter</a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" href="https://www.linkedin.com/in/manishpriyap" target="_blank">linkedin</a>
+            </li>
+        </ul>
+    </footer>
     
 </body>
 </html>
