--- a/quiz.html
+++ b/quiz.html
@@ -51,6 +51,23 @@
     </form>
     <button id="submit-answer-btn">Submit Answers</button>
     <div id="output"></div>
+
+    <footer class="footer">
+        <div class="footer-header">let's connect</div>
+  
+        <ul class="social-links list-non-bullet">
+            <li class="list-item-inline">
+                <a class="link" href="https://www.github.com/manishpriyap" target="_blank">github</a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" href="https://www.twitter.com/manishpriyap" target="_blank">twitter</a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" href="https://www.linkedin.com/in/manishpriyap" target="_blank">linkedin</a>
+            </li>
+        </ul>
+    </footer>
+
     <script src="quiz.js"></script>
 </body>
 </html>  
